--- a/package.yaml
+++ b/package.yaml
@@ -1,48 +1,41 @@
 name:                opencl-examples
 version:             0.1.0.0
-github:              "githubuser/opencl-examples"
+github:              "lancelet/opencl-examples"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2017 Author name here"
+author:              "Jonathan Merritt"
+maintainer:          "j.s.merritt@gmail.com"
+copyright:           "2017 Jonathan Merritt"
 
 extra-source-files:
 - README.md
 - ChangeLog.md
 
-# Metadata used when publishing your package
-synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on Github at <https://github.com/githubuser/opencl-examples#readme>
+synopsis:            Examples using the Haskell OpenCL package
+description:         Please see the README on Github at <https://github.com/lancelet/opencl-examples#readme>
 
 dependencies:
 - base >= 4.7 && < 5
+- CLUtil
+- language-c-quote
+- mainland-pretty
+- mtl
+- OpenCL
+- vector
 
-library:
-  source-dirs: src
+ghc-options:
+  - -Wall
+  - -Werror
+  - -Wincomplete-uni-patterns
+  - -Wincomplete-record-updates
+
+_exe-ghc-options: &exe-ghc-options
+  - -threaded
+  - -rtsopts
+  - -with-rtsopts=-N
 
 executables:
-  opencl-examples-exe:
-    main:                Main.hs
-    source-dirs:         app
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - opencl-examples
 
-tests:
-  opencl-examples-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - opencl-examples
+  01-hello-world:
+    main:        Main.hs
+    source-dirs: app/01-hello-world
+    ghc-options: *exe-ghc-options
